# paperTTPSynthesizerAssessment

./: .gitignore  README.md  index.html  pyproject.toml
data/RWC/: preprocess_RWC.py
data/Reymore/: timber_traits_ground_truth.csv  timber_traits_human_ratings.csv
data/metadata/: split_config.yaml
experiments/cross-validation_timbre-model/: config.yaml
experiments/cross-validation_timbre-model/scripts/: CMTTP.py  compute_predictions_metrics.py  cross_validation_training.py  main.py  timber_traits_predictions_radar_charts.py  timbre_mlp.py
experiments/cross-validation_timbre_model/scripts/: CMTTP.py  compute_predictions_metrics.py  cross_validation_training.py  main.py  timber_traits_predictions_radar_charts.py
experiments/shared/: timbre_mlp.py
experiments/synthesizer-assessment/: compute_mean_embeddings_RWC.py  compute_predictions_metrics.py  compute_synthesized_samples_embeddings.py  main.py  synthesize_samples.py  train_model.py
experiments/synthesizer_assessment/scripts/: RWC_nearest_and_furthest_neighbors.py  TokenSynth_nearest_and_furthest_neighbors.py  compute_embeddings_metadata.py  compute_mean_embeddings_RWC.py  main.py  utils.py  (+5 more)
experiments/timbre-model/: cross-validation_training.py  main.py  plots.py  samples_dataset.py
inference/scripts/: compute_embeddings.py  inference_on_audio_embeddings.py  main.py  timbre_mlp.py
models/paper_checkpoint/: model_architecture.yaml  timbre_mlp.pth
process_RWC/: compute_split_metadata.py  create_RWC_metadata.py  create_embeddings_metadata.py  preprocess_RWC.py  process_RWC.py  samples_to_embeddings.py
