[project]
name = "paperTTPSynthesizerAssessment"
authors = [{ name = "Théo CHASLE CAUCHY", email = "theo.chasle-cauchy@ls2n.fr" }]
version = "1.0.0"
description = "Repository corresponding to the article 'Timbre Trait Prediction for Performance Analysis of Musical Sound Synthesizer using Deep Neural Embeddings'."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "audiofile",
    "fadtk",
    "kaleido",
    "librosa",
    "matplotlib",
    "mido",
    "pandas",
    "plotly",
    "soundfile",
    "tokensynth",
    "torch",
    "tqdm",
    "transformers==4.48.3",
]

[tool.setuptools.packages.find]
exclude = ["data*", "results*", "experiments*", "process_RWC*", "models*"]  # Exclude non-package directories